# graphs

./: .gitignore  CMakeLists.txt  main.c
datatype/: CMakeLists.txt  datatype.c  datatype.h
graph/: CMakeLists.txt  graph.h
graph/_alloc/: CMakeLists.txt
graph/_graph/: CMakeLists.txt  _graph.h
vector/: CMakeLists.txt  vector.c  vector.h
vector/_char-vect/: CMakeLists.txt  _char-vect.c  _char-vect.h
vector/_int-vect/: CMakeLists.txt  _int-vect.c  _int-vect.h
